modules/grammars/environment/src/test/resources/cocos/invalid/NoRelativeWorkDir.ec
PACKAGE invalid

DOCKERFILE NoRelativeWorkDir

WORKDIR "relative/path"